# nanobot-web-console

./: .gitignore  README.md  README_CN.md  index.html  pyproject.toml  server.py
.github/workflows/: ci.yml  publish.yml
nanobot_web_console/: __init__.py  __main__.py  cli.py  index.html  server.py
scripts/: ci_check.py  screenshots.py
