[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "nanobot-web-console"
version = "0.1.0"
description = "Web console and HTTP API server for nanobot — an ultra-lightweight personal AI assistant framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "nanobot contributors" },
]
keywords = ["nanobot", "ai", "assistant", "web-console", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "nanobot-ai>=0.1.4",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
viking = ["openviking>=0.3.0"]
feishu = ["lark-oapi>=1.0.0"]
all = [
    "openviking>=0.3.0",
    "lark-oapi>=1.0.0",
]
dev = [
    "openviking>=0.3.0",
    "lark-oapi>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/tankyhsu/nanobot-web-console"
Repository = "https://github.com/tankyhsu/nanobot-web-console"
Issues = "https://github.com/tankyhsu/nanobot-web-console/issues"

[project.scripts]
nanobot-console = "nanobot_web_console.cli:main"

[tool.setuptools.packages.find]
include = ["nanobot_web_console*"]

[tool.setuptools.package-data]
nanobot_web_console = ["index.html"]
